css/global.css
/************************
** Canadian In-Floor.ca
==========================
Author: David Gaskin
Date: July 2016
*************************/

/*** Global Colors ***/
/*
*	Accent Orange:	#f5911f
* Dark Grey:			#242424
*	Accent Grey			#5b5b5b
*
*/

/*** Import Fonts ***/
@import 'https://fonts.googleapis.com/css?family=Italianno';

/* Cursive Font */
@font-face {
font-family: 'Aramisi';
src: url('../fonts/aramisi.ttf');
font-weight: normal;
font-style: normal;
}
/* Sans-Serif Font */
@font-face {
font-family: 'museo_sans300';
src: url('../fonts/museo_sans/museosans-300-webfont.eot');
src: url('../fonts/museo_sans/museosans-300-webfont.eot?#iefix') format('embedded-opentype'),
		 url('../fonts/museo_sans/museosans-300-webfont.woff') format('woff'),
		 url('../fonts/museo_sans/museosans-300-webfont.ttf') format('truetype'),
		 url('../fonts/museo_sans/museosans-300-webfont.svg#museo_sans300') format('svg');
font-weight: normal;
font-style: normal;
}

/*** General Reset ***/
* {
margin: 0;	padding: 0;
font-size: 100%;
}

/* HTML5 display reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, menu, nav, section {
display: block;
}

/*** Global Styles ***/
body {
	background: #ffffff;
	font-family: museo_sans300, sans-serif;
	font-size: 1.9em;
	line-height: 1.75;
}
body div.wrapper {
	box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.25);
	/** NOTE: Add proper padding here **/
	padding: 0 135px;
}

h1,h2,h3,h4,
div.wrapper > footer {
	font-family: 'Aramisi', serif;
	color: #f5911f;
	font-size: 2.25em;
}
h3 { margin: 0 0 25px; }
h4 { color: #000; font-size: 1.45em;}
section > p:last-of-type,
section > p:only-of-type,
section ul li:last-child,
aside p, article p {	margin-bottom: 30px; }

ul, ol { margin-left: 20px; }
dt { margin-bottom: 10px; }
dd { margin-bottom: 15px; }

figure {
	padding: 15px;
	margin-top: 5px 0;
	width: 50%; /* base-width for figure images */
}
figure img { width: 100% }

/* special class to make parent container full width of wrapper */
.full-width {
	margin-left: -135px;
	margin-right: -135px;
}

/** Navigation **/
nav {
	position: relative; z-index: 1;
	margin-top: -13px; margin-bottom: -30px;
	height: 124px;
	background: transparent url(../images/bg_nav_general.png) no-repeat;
	left: -46px; /* accounts for bg image over-hang */
}
nav a {
	color: #5b5b5b;
	transition: color 250ms;
}
nav > ul {
	font-family: 'Aramisi', serif;
	font-size: 1.35em;
	width: 100%;
	text-align: center;
	position: relative;
	top: 45px;
}
nav > ul.nav > li {
	float: none;
	display: inline-block;
	position: relative;
}

/* CIRS icon */
nav .navbar-header {
	position: absolute;
}
nav .navbar-header a {
	height: 100%;
	padding: 2px;
	position: relative;
	z-index: 100;
}
nav .navbar-header img { border: 1px solid transparent; }

/* call-us button */
nav > a.call-us {
	border-radius: 25px;
	border: 2px solid #999;
	background: transparent;
	padding: 0 12px;
	position: absolute;
	z-index: 100;
	transition: border-color 250ms, color 250ms, transform 400ms ease-in;
	transform-origin: center;
}
nav > a.call-us:hover {
	cursor: pointer;
	text-decoration: none;
	color: #f5911f;
	border-color: #f5911f;
	box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.35);
	transform: scale(1.05,1.1);
	transform-origin: center;
}
nav > a.call-us span {
	position: relative;
	top: 5px;
	padding-right: 6px;
	color: #f5911f;
	font-size: 1.25em;
}

/* dropdown menu */
nav li.dropdown > ul.dropdown-menu {
	font-size: .85em;
	left: -9999px;
	display: block;
}
nav ul.dropdown-menu > li { position: relative; }
nav ul.dropdown-menu > li > a{ text-indent: 12px; }

/*nav ul.dropdown-menu li:hover {	background: #eee; }*/
nav li.dropdown-submenu > ul.dropdown-menu {
	font-size: inherit;
	top: 0;	right: -83%;
	left: 99% !important; /* finnicky style for submenu */
}
nav > ul.nav > li a:hover {
	background: none;
	color: #f5911f;
}
li.dropdown > a:focus + ul.dropdown-menu,
li.dropdown:hover > ul.dropdown-menu,
li.dropdown-submenu:hover > ul.dropdown-menu,
li.dropdown-submenu > a:focus + ul.dropdown-menu {
	display: block;
	left: 0;
}

/* 'Before' flame content */
nav > ul.navbar-nav a:hover:before {
	content: url(../images/nav_flame.png);
	position: absolute;
}
/* top-level list items */
nav > ul.navbar-nav > li a:hover:before {
	top: 10px; left: -4px;
}
/* dropdown-menu list items */
nav ul.dropdown-menu > li > a:hover:before {
	position: absolute;
	left: 0; top: 7px;
}

/* navbar-xs styles */
#navbar-xs.navbar-collapse, #navbar-xs-submenu.navbar-collapse {
	position: absolute;
	top: 124px; z-index: 10000;
	overflow: visible;
	width: 100%;
	background: #fff;
	border-top: 3px solid #ccc;
	border-bottom: 3px solid #ccc;

}
#navbar-xs.navbar-collapse > ul { margin: 0 -15px; }
#navbar-xs.navbar-collapse > ul > li {
	padding: 8px 0;
}
#navbar-xs.navbar-collapse > ul > li > a { padding-left: 20px; }
#navbar-xs.navbar-collapse > ul > li:not(:last-child) {
	border-bottom: 1px solid #ddd;
}

/** Jumbotron **/
.jumbotron {
	border-radius: 0 !important;
	margin-bottom: 0;
	background-color: #eee;
}
.jumbotron .panel {
	background: rgba(255, 255, 255, 0.75);
	padding: 15px;
}
.jumbotron .panel p.h1 {
	font-family: 'Aramisi', serif;
	color: #f5911f;
}

/** Jumbotron Captions **/
.jumbotron[name="default"] .panel,
.jumbotron[name="infloor_heat"] .panel {
	position: absolute;
	max-width: 400px;
	width: 400px;
}
.jumbotron[name="infloor_heat"] .panel { left: -30px; }

/** Jumbotron Images **/
.jumbotron[name="default"] {
	background-image:url(../images/display_images/playing_family.jpg);
	background-position: 0 86%;
	background-size: 100%;
	background-size: cover;
	height: 714px;
}
.jumbotron[name="infloor_heat"] {
	background-image: url(../images/display_images/happy_family.jpg);
	background-size: 100%;
	background-size: cover;
	height: 700px;
}
.jumbotron[name="thermal_mass"] {
	background-image:url(../images/display_images/family_livingroom.jpg);
	background-position:0;
	background-size: 100%;
	background-size: cover;
	height:600px;
}
/* ... */

